[package]
name = "toml-rs-bind"
version = "0.1.0"
authors = ["soeur"]
edition = "2018"

[dependencies]
wasm-bindgen =  { version = "0.2.67", features = ["serde-serialize"] }
console_error_panic_hook = "0.1.6"
serde = { version = "1.0.115", features = ["derive", "alloc"] }
serde_json = "1.0.57"
toml = "0.5.6"

[lib]
crate-type = ["cdylib", "rlib"]

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-Oz", "--enable-mutable-globals"]